@@ -17,11 +17,10 @@
 package org.apache.jackrabbit.oak.spi.security.authentication.external;
 
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Test;
@@ -162,14 +161,14 @@ public class ExternalIdentityRefTest {
             @NotNull
             @Override
             public Map<String, ?> getProperties() {
-                return ImmutableMap.of();
+                return Map.of();
             }
         }));
     }
 
     @Test
     public void testToString() {
-        for (ExternalIdentityRef r : ImmutableList.of(ref, refEmptyProvider, refEmptyProvider)) {
+        for (ExternalIdentityRef r : List.of(ref, refEmptyProvider, refEmptyProvider)) {
             assertEquals("ExternalIdentityRef{" + "id='" + r.getId() + '\'' + ", providerName='" + r.getProviderName() + '\'' + '}', r.toString());
         }
     }
