@@ -16,15 +16,12 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.basic;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.AbstractExternalAuthTest;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentity;
@@ -53,6 +50,7 @@ import java.io.ByteArrayInputStream;
 import java.math.BigDecimal;
 import java.security.Principal;
 import java.text.Normalizer;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collection;
@@ -906,7 +904,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
             for (ExternalIdentityRef inheritedGrRef : extGr.getDeclaredGroups()) {
                 Group g = userManager.getAuthorizable(inheritedGrRef.getId(), Group.class);
                 assertNotNull(g);
-                if (Iterables.contains(externalUser.getDeclaredGroups(), inheritedGrRef)) {
+                if (IterableUtils.contains(externalUser.getDeclaredGroups(), inheritedGrRef)) {
                     assertTrue(g.isDeclaredMember(a));
                 } else {
                     assertFalse(g.isDeclaredMember(a));
@@ -1057,7 +1055,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
         ExternalUser externalUser = idp.getUser(TestIdentityProvider.ID_SECOND_USER);
         Authorizable a = syncCtx.createUser(externalUser);
 
-        syncCtx.syncProperties(externalUser, a, ImmutableMap.of());
+        syncCtx.syncProperties(externalUser, a, Map.of());
 
         for (String propName : externalUser.getProperties().keySet()) {
             assertFalse(a.hasProperty(propName));
@@ -1076,7 +1074,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
             a.setProperty(propName, anyValue);
         }
 
-        syncCtx.syncProperties(externalUser, a, ImmutableMap.of());
+        syncCtx.syncProperties(externalUser, a, Map.of());
         for (String propName : extProps.keySet()) {
             assertTrue(a.hasProperty(propName));
             assertEquals(anyValue, a.getProperty(propName)[0]);
@@ -1452,14 +1450,14 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
 
     @Test
     public void testCreateValuesEmptyCollection() throws Exception {
-        Value[] vs = syncCtx.createValues(ImmutableList.of());
+        Value[] vs = syncCtx.createValues(List.of());
         assertNotNull(vs);
         assertEquals(0, vs.length);
     }
 
     @Test
     public void testCreateValuesSkipsNull() throws Exception {
-        List<String> strings = Lists.newArrayList("s", null, null, "t");
+        List<String> strings = new ArrayList<>(Arrays.asList("s", null, null, "t"));
         Value[] vs = syncCtx.createValues(strings);
         assertNotNull(vs);
         assertEquals(2, vs.length);
