@@ -16,10 +16,7 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl.principal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import org.apache.jackrabbit.api.security.principal.GroupPrincipal;
 import org.apache.jackrabbit.oak.spi.commit.MoveTracker;
 import org.apache.jackrabbit.oak.spi.commit.ValidatorProvider;
@@ -62,12 +59,12 @@ public class SystemPrincipalConfigTest extends AbstractExternalAuthTest {
     private SystemPrincipalConfig systemPrincipalConfig;
 
     public SystemPrincipalConfigTest(String[] systemUserNames, String name) {
-        this.systemUserNames = (systemUserNames == null) ? null : ImmutableSet.copyOf(systemUserNames);
+        this.systemUserNames = (systemUserNames == null) ? null : Set.of(systemUserNames);
     }
 
     @Parameterized.Parameters(name = "name={1}")
     public static Collection<Object[]> parameters() {
-        return Lists.newArrayList(
+        return List.of(
                 new Object[] { null, "Null" },
                 new Object[] { new String[0], "Empty names" },
                 new Object[] { new String[] {SYSTEM_USER_NAME_1}, "Single name" },
@@ -77,7 +74,7 @@ public class SystemPrincipalConfigTest extends AbstractExternalAuthTest {
     @Override
     public void before() throws Exception {
         super.before();
-        context.registerService(SyncHandler.class, new DefaultSyncHandler(), ImmutableMap.of(DefaultSyncConfigImpl.PARAM_USER_DYNAMIC_MEMBERSHIP, true));
+        context.registerService(SyncHandler.class, new DefaultSyncHandler(), Map.of(DefaultSyncConfigImpl.PARAM_USER_DYNAMIC_MEMBERSHIP, true));
         workspaceName = root.getContentSession().getWorkspaceName();
 
         systemPrincipalConfig = (systemUserNames == null) ? new SystemPrincipalConfig(Collections.emptySet()) : new SystemPrincipalConfig(systemUserNames);
