@@ -16,13 +16,10 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.principalbased.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Maps;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.plugins.tree.TreeUtil;
 import org.apache.jackrabbit.oak.spi.security.ConfigurationParameters;
 import org.apache.jackrabbit.oak.spi.security.authorization.AuthorizationConfiguration;
@@ -54,8 +51,10 @@ import javax.jcr.security.AccessControlException;
 import javax.jcr.security.AccessControlPolicy;
 import java.security.Principal;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol.AccessControlConstants.REP_GLOB;
 import static org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol.AccessControlConstants.REP_ITEM_NAMES;
@@ -139,20 +138,20 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
     }
 
     private List<PropInfo> mockPropInfos(@NotNull Map<String, String> restrictions, int propertyType) throws RepositoryException {
-        return mockPropInfos(Maps.transformValues(restrictions, string -> {
+        return mockPropInfos(restrictions.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, e -> {
             try {
-                return new Value[] {getValueFactory(root).createValue(string, propertyType)};
-            } catch (ValueFormatException e) {
-                throw new RuntimeException(e);
+                return new Value[] {getValueFactory(root).createValue(e.getValue(), propertyType)};
+            } catch (ValueFormatException ex) {
+                throw new RuntimeException(ex);
             }
-        }));
+        })));
     }
 
     private List<PropInfo> mockPropInfos(@NotNull Map<String, Value[]> restrictions) throws RepositoryException {
-        List<PropInfo> propInfos = new ArrayList();
+        List<PropInfo> propInfos = new ArrayList<>();
         for (Map.Entry<String,Value[]> r : restrictions.entrySet()) {
             String jcrName = r.getKey();
-            List<Value> vs = ImmutableList.copyOf(r.getValue());
+            List<Value> vs = Arrays.asList(r.getValue());
             PropInfo propInfo = mockPropInfo(jcrName);
             if (!vs.isEmpty()) {
                 TextValue first = when(mock(TextValue.class).getString()).thenReturn(vs.get(0).getString()).getMock();
@@ -475,7 +474,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         policyTree = root.getTree(policyTree.getPath());
         assertTrue(policyTree.exists());
         assertTrue(policyTree.hasProperty(REP_PRINCIPAL_NAME));
-        assertTrue(Iterables.isEmpty(policyTree.getChildren()));
+        assertTrue(IterableUtils.isEmpty(policyTree.getChildren()));
     }
 
     @Test(expected = IllegalStateException.class)
@@ -575,7 +574,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         // rep:privileges with wrong type
         PropInfo propInfo = mockPropInfo(getJcrName(REP_PRIVILEGES));
         TextValue tx = when(mock(TextValue.class).getString()).thenReturn(getJcrName(JCR_READ)).getMock();
-        List values = ImmutableList.of(tx);
+        List values = List.of(tx);
         when(propInfo.getTextValues()).thenReturn(values);
         when(propInfo.getType()).thenReturn(PropertyType.STRING);
         propInfos.add(propInfo);
@@ -591,8 +590,8 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         importer.handlePropInfo(policyTree, mockPropInfo(user.getPrincipal()), mockPropertyDefinition(getJcrName(NT_REP_PRINCIPAL_POLICY)));
 
         importer.startChildInfo(mockNodeInfo("entry", getJcrName(NT_REP_PRINCIPAL_ENTRY)), mockPropInfos("/effective/path", PrivilegeConstants.REP_WRITE));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(getJcrName(REP_GLOB), "/some/glob"), PropertyType.STRING));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of()));
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(getJcrName(REP_GLOB), "/some/glob"), PropertyType.STRING));
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of()));
     }
 
     @Test(expected = IllegalStateException.class)
@@ -603,8 +602,8 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         importer.handlePropInfo(policyTree, mockPropInfo(user.getPrincipal()), mockPropertyDefinition(getJcrName(NT_REP_PRINCIPAL_POLICY)));
 
         importer.startChildInfo(mockNodeInfo("entry", getJcrName(NT_REP_PRINCIPAL_ENTRY)), mockPropInfos("/effective/path", PrivilegeConstants.REP_WRITE));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(getJcrName(REP_NT_NAMES), new Value[0])));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of()));
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(getJcrName(REP_NT_NAMES), new Value[0])));
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of()));
     }
 
     @Test(expected = IllegalStateException.class)
@@ -615,7 +614,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         importer.handlePropInfo(policyTree, mockPropInfo(user.getPrincipal()), mockPropertyDefinition(getJcrName(NT_REP_PRINCIPAL_POLICY)));
 
         importer.startChildInfo(mockNodeInfo("entry", getJcrName(NT_REP_PRINCIPAL_ENTRY)), mockPropInfos("/effective/path", PrivilegeConstants.REP_READ_PROPERTIES));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(
                 getJcrName(REP_NODE_PATH), "/effective/path"), PropertyType.STRING));
     }
 
@@ -628,7 +627,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
 
         importer.start(policyTree);
         importer.startChildInfo(mockNodeInfo("entry", getJcrName(NT_REP_PRINCIPAL_ENTRY)), mockPropInfos(null, PrivilegeConstants.REP_READ_PROPERTIES));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(
                 getJcrName(REP_NODE_PATH), "/effective/path"), PropertyType.STRING));
 
         importer.endChildInfo();
@@ -651,7 +650,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
 
         ValueFactory vf = getValueFactory(root);
         Value[] nameValues = new Value[] {vf.createValue(getJcrName("jcr:content"), PropertyType.NAME), vf.createValue(getJcrName("jcr:data"), PropertyType.NAME)};
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(
                 getJcrName(REP_ITEM_NAMES), nameValues,
                 getJcrName(REP_GLOB), new Value[] {vf.createValue("/some/*/globbing")})
         ));
@@ -673,7 +672,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
 
         importer.start(policyTree);
         importer.startChildInfo(mockNodeInfo("entry", getJcrName(NT_REP_PRINCIPAL_ENTRY)), mockPropInfos("/effective/path", PrivilegeConstants.REP_WRITE));
-        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(ImmutableMap.of(
+        importer.startChildInfo(mockNodeInfo(getJcrName(REP_RESTRICTIONS), getJcrName(NT_REP_RESTRICTIONS)), mockPropInfos(Map.of(
                 "unsupported", "x"), PropertyType.STRING));
         // adding entry to policy must already throw the exception
         importer.endChildInfo();
