@@ -16,12 +16,12 @@
  */
 package org.apache.jackrabbit.oak.benchmark.authorization;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import joptsimple.internal.Strings;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlManager;
 import org.apache.jackrabbit.api.security.authorization.PrivilegeCollection;
 import org.apache.jackrabbit.commons.jackrabbit.authorization.AccessControlUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.spi.security.privilege.PrivilegeBits;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -44,7 +44,7 @@ public class GetPrivilegeCollectionIncludeNamesTest extends AbstractHasItemGetIt
         ACCESSCONTORL_MANAGER_HAS_PRIVILEGES
     } 
     
-    private static final List<String> ALL_PRIVILEGE_NAMES = ImmutableList.copyOf(PrivilegeBits.BUILT_IN.keySet());
+    private static final List<String> ALL_PRIVILEGE_NAMES = List.copyOf(PrivilegeBits.BUILT_IN.keySet());
     
     private final EvaluationType evalType;
     
@@ -55,7 +55,7 @@ public class GetPrivilegeCollectionIncludeNamesTest extends AbstractHasItemGetIt
     
     @NotNull
     private static EvaluationType getEvalType(@Nullable String type) {
-        if (Strings.isNullOrEmpty(type)) {
+        if (StringUtils.isEmpty(type)) {
             return EvaluationType.ACCESSCONTORL_MANAGER_GET_PRIVILEGE_COLLECTION;
         }
         try {
@@ -73,7 +73,7 @@ public class GetPrivilegeCollectionIncludeNamesTest extends AbstractHasItemGetIt
     @Override
     void additionalOperations(@NotNull String path, @NotNull Session s, @NotNull AccessControlManager acMgr) {
         try {
-            List<String> privNames = ImmutableList.of(getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES));
+            List<String> privNames = List.of(getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES), getRandom(ALL_PRIVILEGE_NAMES));
             String accessControlledPath = getAccessControlledPath(path);
             if (EvaluationType.ACCESSCONTORL_MANAGER_GET_PRIVILEGE_COLLECTION == evalType) {
                 PrivilegeCollection pc = ((JackrabbitAccessControlManager) acMgr).getPrivilegeCollection(accessControlledPath);
@@ -86,7 +86,7 @@ public class GetPrivilegeCollectionIncludeNamesTest extends AbstractHasItemGetIt
             } else if (EvaluationType.JCR_PRIVILEGE_NAME_AGGREGATION == evalType) {
                 // evaluation using regular JCR Privilege API 
                 Privilege[] privileges = acMgr.getPrivileges(accessControlledPath);
-                Set<String> privilegeNames = CollectionUtils.toSet(AccessControlUtils.namesFromPrivileges(privileges));
+                Set<String> privilegeNames = SetUtils.toSet(AccessControlUtils.namesFromPrivileges(privileges));
                 Stream.of(privileges).filter(Privilege::isAggregate).forEach(privilege -> Collections.addAll(privilegeNames, AccessControlUtils.namesFromPrivileges(privilege.getAggregatePrivileges())));
                 for (String toTest : privNames) {
                     boolean includes = privilegeNames.contains(toTest);
