@@ -16,14 +16,12 @@
  */
 package org.apache.jackrabbit.oak.exercise.security.authorization.models.readonly;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlPolicy;
 import org.apache.jackrabbit.commons.iterator.AccessControlPolicyIteratorAdapter;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.plugins.tree.TreeLocation;
 import org.apache.jackrabbit.oak.plugins.tree.TreeType;
@@ -283,7 +281,7 @@ public final class ReadOnlyAuthorizationConfiguration extends ConfigurationBase 
 
                 @Override
                 public boolean hasPrivileges(@Nullable Tree tree, @NotNull String... privilegeNames) {
-                    Set<String> privs = CollectionUtils.toSet(privilegeNames);
+                    Set<String> privs = SetUtils.toSet(privilegeNames);
                     privs.removeAll(READ_PRIVILEGE_NAMES);
 
                     return privs.isEmpty();
@@ -345,25 +343,25 @@ public final class ReadOnlyAuthorizationConfiguration extends ConfigurationBase 
     @NotNull
     @Override
     public List<? extends CommitHook> getCommitHooks(@NotNull String workspaceName) {
-        return ImmutableList.of();
+        return List.of();
     }
 
     @NotNull
     @Override
     public List<? extends ValidatorProvider> getValidators(@NotNull String workspaceName, @NotNull Set<Principal> principals, @NotNull MoveTracker moveTracker) {
-        return ImmutableList.of();
+        return List.of();
     }
 
     @NotNull
     @Override
     public List<ThreeWayConflictHandler> getConflictHandlers() {
-        return ImmutableList.of();
+        return List.of();
     }
 
     @NotNull
     @Override
     public List<ProtectedItemImporter> getProtectedItemImporters() {
-        return ImmutableList.of();
+        return List.of();
     }
 
     @NotNull
