@@ -23,12 +23,10 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 
 import org.apache.jackrabbit.oak.Oak;
 import org.apache.jackrabbit.oak.OakBaseTest;
@@ -60,7 +58,7 @@ public class TreeTest extends OakBaseTest {
     public void setUp() {
         repository = new Oak(store)
             .with(new OpenSecurityProvider())
-            .with(new CompositeConflictHandler(ImmutableList.of(
+            .with(new CompositeConflictHandler(List.of(
                     ConflictHandlers.wrap(new ChildOrderConflictHandler() {
                         /**
                          * Allow deleting changed node.
@@ -439,7 +437,7 @@ public class TreeTest extends OakBaseTest {
                 r1.commit();
 
                 // get current sequence of child names
-                List<String> names = Lists.newArrayList();
+                List<String> names = new ArrayList<>();
                 for (Tree t : r1.getTree("/").getChildren()) {
                     names.add(t.getName());
                 }
