@@ -3,7 +3,7 @@
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
  * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
+ * to you under the Apache License, Version 2.0 (theF
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
@@ -25,6 +25,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -39,14 +40,9 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import ch.qos.logback.classic.Level;
-import org.apache.jackrabbit.guava.common.base.Joiner;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.jackrabbit.guava.common.base.Splitter;
-import org.apache.jackrabbit.guava.common.base.Strings;
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Lists;
-import org.apache.jackrabbit.guava.common.collect.Maps;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import joptsimple.OptionException;
 import org.apache.commons.io.FileUtils;
 import org.apache.felix.cm.file.ConfigurationHandler;
@@ -59,7 +55,7 @@ import org.apache.jackrabbit.oak.blob.cloud.azure.blobstorage.AzureDataStoreUtil
 import org.apache.jackrabbit.oak.blob.cloud.s3.S3Constants;
 import org.apache.jackrabbit.oak.blob.cloud.s3.S3DataStoreUtils;
 import org.apache.jackrabbit.oak.commons.FileIOUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.commons.junit.LogCustomizer;
 import org.apache.jackrabbit.oak.plugins.blob.MemoryBlobStoreNodeStore;
 import org.apache.jackrabbit.oak.plugins.blob.MarkSweepGarbageCollector;
@@ -75,8 +71,7 @@ import org.apache.jackrabbit.oak.plugins.index.lucene.directory.OakDirectory;
 import org.apache.jackrabbit.oak.run.cli.BlobStoreOptions.Type;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStore;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStoreBuilders;
-import org.apache.jackrabbit.oak.segment.azure.AzureStorageCredentialManager;
-import org.apache.jackrabbit.oak.segment.azure.AzureUtilities;
+import org.apache.jackrabbit.oak.segment.azure.AzurePersistenceManager;
 import org.apache.jackrabbit.oak.segment.azure.tool.ToolUtils;
 import org.apache.jackrabbit.oak.segment.compaction.SegmentGCOptions;
 import org.apache.jackrabbit.oak.segment.file.FileStore;
@@ -150,7 +145,7 @@ public class DataStoreCommandTest {
     public void setup() throws Exception {
         if (storeFixture instanceof StoreFixture.AzureSegmentStoreFixture) {
             assumeFalse("Environment variable \"AZURE_SECRET_KEY\" must be set to run Azure Segment fixture",
-                    Strings.isNullOrEmpty(System.getenv("AZURE_SECRET_KEY")));
+                    StringUtils.isEmpty(System.getenv("AZURE_SECRET_KEY")));
         }
 
         setupDataStore = blobFixture.init(temporaryFolder);
@@ -181,7 +176,7 @@ public class DataStoreCommandTest {
 
         Data data = new Data();
 
-        List<Integer> toBeDeleted = Lists.newArrayList();
+        List<Integer> toBeDeleted = new ArrayList<>();
         Random rand = new Random();
         for (int i = 0; i < numMaxDeletions; i++) {
             int n = rand.nextInt(numBlobs);
@@ -258,7 +253,7 @@ public class DataStoreCommandTest {
         }
 
         for (String id : data.missingDataStore) {
-            long count = blobStore.countDeleteChunks(ImmutableList.of(id), 0);
+            long count = blobStore.countDeleteChunks(List.of(id), 0);
             assertEquals(1, count);
         }
 
@@ -293,11 +288,10 @@ public class DataStoreCommandTest {
     public void testNoSensitiveParams() throws Exception {
         storeFixture.close();
         File dump = temporaryFolder.newFolder();
-        List<String> argsList = Lists
-            .newArrayList("--check-consistency", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
+        List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
                 dump.getAbsolutePath(), storeFixture.getConnectionString(), "--reset-log-config", "false", "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
@@ -325,16 +319,15 @@ public class DataStoreCommandTest {
     public void testMissingOpParams() throws Exception {
         storeFixture.close();
         File dump = temporaryFolder.newFolder();
-        List<String> argsList = Lists
-            .newArrayList("--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
+        List<String> argsList = new ArrayList<>(Arrays.asList("--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
                 dump.getAbsolutePath(), storeFixture.getConnectionString(), "--reset-log-config", "false", "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
         log.info("Running testMissingOpParams: {}", argsList);
-        testIncorrectParams(argsList, Lists.newArrayList("No actions specified"), DataStoreCommand.class);
+        testIncorrectParams(argsList, new ArrayList<>(Arrays.asList("No actions specified")), DataStoreCommand.class);
     }
 
     /**
@@ -347,15 +340,14 @@ public class DataStoreCommandTest {
         Assume.assumeTrue(storeFixture instanceof StoreFixture.SegmentStoreFixture);
 
         File dump = temporaryFolder.newFolder();
-        List<String> argsList = Lists
-            .newArrayList(storeFixture.getConnectionString(),
+        List<String> argsList = new ArrayList<>(Arrays.asList(storeFixture.getConnectionString(),
                 "--out-dir", dump.getAbsolutePath(), "--reset-log-config", "false", "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath(), "--check-consistency");
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath(), "--check-consistency"));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
-        testIncorrectParams(argsList, Lists.newArrayList("No BlobStore specified"), DataStoreCommand.class);
+        testIncorrectParams(argsList, new ArrayList<>(Arrays.asList("No BlobStore specified")), DataStoreCommand.class);
     }
 
     @Test
@@ -573,7 +565,7 @@ public class DataStoreCommandTest {
         additionalParams += " --check-consistency-gc true";
         testGc(dump, data, 0, false, false);
 
-        assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+        assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
 
         // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
         assertFileEquals(dump, "consistencyCandidatesAfterGC", data.missingDataStore);
@@ -683,15 +675,14 @@ public class DataStoreCommandTest {
         Data data = prepareData(storeFixture, blobFixture, 10, 5, 1);
         storeFixture.close();
 
-        List<String> argsList = Lists
-            .newArrayList("--collect-garbage", "--max-age", String.valueOf(0), "--" + getOption(blobFixture.getType()),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--collect-garbage", "--max-age", String.valueOf(0), "--" + getOption(blobFixture.getType()),
                 blobFixture.getConfigPath(), storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(),
-                "--reset-log-config", "false", "--work-dir", temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                "--reset-log-config", "false", "--work-dir", temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
-        testIncorrectParams(argsList, Lists.newArrayList("Not all repositories have marked references available : "),
+        testIncorrectParams(argsList, new ArrayList<>(Arrays.asList("Not all repositories have marked references available : ")),
             MarkSweepGarbageCollector.class);
     }
 
@@ -708,18 +699,17 @@ public class DataStoreCommandTest {
         Data data = prepareData(storeFixture, blobFixture, 10, 5, 0);
         storeFixture.close();
 
-        List<String> argsList = Lists
-            .newArrayList("--check-consistency", "--fake-ds-path", dsPath.getAbsolutePath(),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", "--fake-ds-path", dsPath.getAbsolutePath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
         DataStoreCommand cmd = new DataStoreCommand();
 
         cmd.execute(argsList.toArray(new String[0]));
         assertFileEquals(dump, "avail-", new HashSet<>());
-        assertFileEquals(dump, "marked-", Sets.difference(data.added, data.deleted));
+        assertFileEquals(dump, "marked-", SetUtils.difference(data.added, data.deleted));
     }
 
 
@@ -728,11 +718,10 @@ public class DataStoreCommandTest {
     }
 
     private void testConsistency(File dump, Data data, boolean verbose, boolean verboseRootPath, boolean markOnly) throws Exception {
-        List<String> argsList = Lists
-            .newArrayList("--check-consistency", String.valueOf(markOnly), "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", String.valueOf(markOnly), "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -743,23 +732,23 @@ public class DataStoreCommandTest {
         cmd.execute(argsList.toArray(new String[0]));
         
         if (!markOnly) {
-            assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+            assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
         } else {
             assertFileNull(dump, "avail-");
         }
 
         // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
         assertFileEquals(dump, "marked-", verbose ?
-                encodedIdsAndPath(Sets.difference(verboseRootPath ? data.addedSubset :
+                encodedIdsAndPath(SetUtils.difference(verboseRootPath ? data.addedSubset :
                         data.added, data.deleted), blobFixture.getType(), data.idToPath, true) :
                 (storeFixture instanceof StoreFixture.MongoStoreFixture) ?
-                        encodedIdsAndPath(Sets.difference(data.added, data.deleted), blobFixture.getType(), data.idToPath, false) :
-                        Sets.difference(data.added, data.deleted));
+                        encodedIdsAndPath(SetUtils.difference(data.added, data.deleted), blobFixture.getType(), data.idToPath, false) :
+                        SetUtils.difference(data.added, data.deleted));
         
         if (!markOnly) {
             // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
             assertFileEquals(dump, "gccand-", verbose ?
-                    encodedIdsAndPath(verboseRootPath ? Sets.intersection(data.addedSubset, data.missingDataStore) :
+                    encodedIdsAndPath(verboseRootPath ? SetUtils.intersection(data.addedSubset, data.missingDataStore) :
                             data.missingDataStore, blobFixture.getType(), data.idToPath, true) :
                     (storeFixture instanceof StoreFixture.MongoStoreFixture) ?
                             encodedIdsAndPath(data.missingDataStore, blobFixture.getType(), data.idToPath, false) :
@@ -770,11 +759,10 @@ public class DataStoreCommandTest {
     }
 
     private void testDumpRef(File dump, Data data, boolean verbose, boolean verboseRootPath) throws Exception {
-        List<String> argsList = Lists
-                .newArrayList("--dump-ref", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--dump-ref", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                         storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
-                        temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                        temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -786,18 +774,17 @@ public class DataStoreCommandTest {
 
         // Verbose would have paths as well as ids changed, otherwise only ids would be listed as it is.
         assertFileEquals(dump, "dump-ref-", verbose ?
-                encodedIdsAndPath(Sets.difference(verboseRootPath ? data.addedSubset :
+                encodedIdsAndPath(SetUtils.difference(verboseRootPath ? data.addedSubset :
                         data.added, data.deleted), blobFixture.getType(), data.idToPath, true) :
-                Sets.difference(data.added, data.deleted), "dump");
+                SetUtils.difference(data.added, data.deleted), "dump");
 
     }
 
     private void testDumpIds(File dump, Data data, boolean verbose) throws Exception {
-        List<String> argsList = Lists
-                .newArrayList("--dump-id", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--dump-id", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                         storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
-                        temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                        temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -809,18 +796,17 @@ public class DataStoreCommandTest {
 
         // Verbose would have backend friendly encoded ids
         assertFileEquals(dump, "dump-id-", verbose ?
-                encodeIds(Sets.difference(data.added, data.missingDataStore), blobFixture.getType()) :
-                        Sets.difference(data.added, data.missingDataStore), "dump");
+                encodeIds(SetUtils.difference(data.added, data.missingDataStore), blobFixture.getType()) :
+                        SetUtils.difference(data.added, data.missingDataStore), "dump");
 
     }
 
     private void testGc(File dump, Data data, long maxAge, boolean markOnly, boolean refsOld) throws Exception {
-        List<String> argsList = Lists
-            .newArrayList("--collect-garbage", String.valueOf(markOnly), "--max-age", String.valueOf(maxAge),
+        List<String> argsList = new ArrayList<>(Arrays.asList("--collect-garbage", String.valueOf(markOnly), "--max-age", String.valueOf(maxAge),
                 "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
-                temporaryFolder.newFolder().getAbsolutePath());
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+                temporaryFolder.newFolder().getAbsolutePath()));
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -828,27 +814,27 @@ public class DataStoreCommandTest {
         cmd.execute(argsList.toArray(new String[0]));
 
         if (!markOnly && !refsOld) {
-            assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+            assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
         } else {
             assertFileNull(dump, "avail-");
         }
 
-        assertFileEquals(dump, "marked-", Sets.difference(data.added, data.deleted));
+        assertFileEquals(dump, "marked-", SetUtils.difference(data.added, data.deleted));
         if (!markOnly && !refsOld) {
             assertFileEquals(dump, "gccand-", data.deleted);
         } else {
             assertFileNull(dump, "gccand-");
         }
 
-        Sets.SetView<String> blobsBeforeGc = Sets.difference(data.added, data.missingDataStore);
+        Set<String> blobsBeforeGc = SetUtils.difference(data.added, data.missingDataStore);
         if (maxAge <= 0) {
-            assertEquals(Sets.difference(blobsBeforeGc, data.deleted), blobs(setupDataStore));
+            assertEquals(SetUtils.difference(blobsBeforeGc, data.deleted), blobs(setupDataStore));
         } else {
             assertEquals(blobsBeforeGc, blobs(setupDataStore));
         }
     }
 
-    public static void testIncorrectParams(List<String> argList, ArrayList<String> assertMsg, Class logger) {
+    public static void testIncorrectParams(List<String> argList, List<String> assertMsg, Class logger) {
         LogCustomizer customLogs = LogCustomizer
             .forLogger(logger.getName())
             .enable(Level.INFO)
@@ -871,8 +857,8 @@ public class DataStoreCommandTest {
     private static Map<String, String> dummyData(MemoryBlobStoreNodeStore memNodeStore, String rep2Id, NodeStore store,
         DataStoreBlobStore setupDataStore, File f)
         throws IOException, CommitFailedException, DataStoreException {
-        List<String> list = Lists.newArrayList();
-        Map<String, String> idMapping = Maps.newHashMap();
+        List<String> list = new ArrayList<>();
+        Map<String, String> idMapping = new HashMap<>();
         NodeBuilder a = memNodeStore.getRoot().builder();
         for (int i = 0; i < 2; i++) {
             Blob b = store.createBlob(randomStream(i+100, 18342));
@@ -935,11 +921,11 @@ public class DataStoreCommandTest {
 
     private static Set<String> encodedIdsAndPath(Set<String> ids, Type dsOption, Map<String, String> idToNodes,
         boolean encodeId) {
-        return CollectionUtils.toSet(Iterators.transform(ids.iterator(), input -> Joiner.on(",").join(encodeId ? encodeId(input, dsOption) : input, idToNodes.get(input))));
+        return SetUtils.toSet(Iterators.transform(ids.iterator(), input -> String.join(",", encodeId ? encodeId(input, dsOption) : input, idToNodes.get(input))));
     }
 
     private static Set<String> encodeIds(Set<String> ids, Type dsOption) {
-        return CollectionUtils.toSet(Iterators.transform(ids.iterator(), input -> encodeId(input, dsOption)));
+        return SetUtils.toSet(Iterators.transform(ids.iterator(), input -> encodeId(input, dsOption)));
     }
 
 
@@ -983,7 +969,7 @@ public class DataStoreCommandTest {
 
         public Data() {
             added = new HashSet<>();
-            idToPath = Maps.newHashMap();
+            idToPath = new HashMap<>();
             deleted = new HashSet<>();
             missingDataStore = new HashSet<>();
             addedSubset = new HashSet<>();
@@ -1141,7 +1127,6 @@ public class DataStoreCommandTest {
         class AzureSegmentStoreFixture extends SegmentStoreFixture {
             private static final String AZURE_DIR = "repository";
             private String container;
-            private final AzureStorageCredentialManager azureStorageCredentialManager = new AzureStorageCredentialManager();
 
             @Override public NodeStore init(DataStoreBlobStore blobStore, File storeFile) throws Exception {
                 Properties props = AzureDataStoreUtils.getAzureConfig();
@@ -1151,14 +1136,14 @@ public class DataStoreCommandTest {
                 container = container + System.currentTimeMillis();
                 // Create the azure segment container
                 String connectionString = getAzureConnectionString(accessKey, secretKey, container, AZURE_DIR);
-                AzureUtilities.cloudBlobDirectoryFrom(connectionString, container, AZURE_DIR);
+                AzurePersistenceManager.createAzurePersistence(connectionString, null, accessKey, container, AZURE_DIR, false, true);
 
                 // get the azure uri expected by the command
                 storePath = getAzureUri(accessKey, container, AZURE_DIR);
 
                 // initialize azure segment for test setup
                 SegmentNodeStorePersistence segmentNodeStorePersistence =
-                    ToolUtils.newSegmentNodeStorePersistence(ToolUtils.SegmentStoreType.AZURE, storePath, azureStorageCredentialManager);
+                    ToolUtils.newSegmentNodeStorePersistence(ToolUtils.SegmentStoreType.AZURE, storePath);
                 fileStore = fileStoreBuilder(storeFile).withBlobStore(blobStore)
                     .withCustomPersistence(segmentNodeStorePersistence).build();
 
@@ -1190,7 +1175,6 @@ public class DataStoreCommandTest {
             public void after() {
                 try {
                     AzureDataStoreUtils.deleteContainer(container);
-                    azureStorageCredentialManager.close();
                 } catch(Exception e) {
                     log.error("Error in cleaning the container {}", container, e);
                 }
@@ -1350,15 +1334,15 @@ public class DataStoreCommandTest {
 
     static class FixtureHelper {
         static List<StoreFixture> getStoreFixtures() {
-            return ImmutableList.of(StoreFixture.MONGO, StoreFixture.SEGMENT, StoreFixture.SEGMENT_AZURE);
+            return List.of(StoreFixture.MONGO, StoreFixture.SEGMENT, StoreFixture.SEGMENT_AZURE);
         }
 
         static List<DataStoreFixture> getDataStoreFixtures() {
-            return ImmutableList.of(DataStoreFixture.S3, DataStoreFixture.AZURE, DataStoreFixture.FDS);
+            return List.of(DataStoreFixture.S3, DataStoreFixture.AZURE, DataStoreFixture.FDS);
         }
 
         static List<Object[]> get() {
-            List<Object[]> fixtures = Lists.newArrayList();
+            List<Object[]> fixtures = new ArrayList<>();
             for (StoreFixture storeFixture : getStoreFixtures()) {
                 if (storeFixture.isAvailable()) {
                     for (DataStoreFixture dsFixture : getDataStoreFixtures()) {
